--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
     volumes:
       - ./:/app
       - bundle:/usr/local/bundle
+      - node_modules:/app/node_modules
     ports:
       - 3000:3000
 
 volumes:
   bundle:
+  node_modules:
