--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": "true",
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
+    "@rails/actioncable": "^7.0.3-1",
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "dayjs": "^1.11.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
